--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="right">
     <a href="#">SÖK</a>
     <a href="#">LISTA (2)</a>
-    <a href="#">KUNDKORG (2)</a>
+    <a href="#">KUNDKORG (2) <img class="shoppingcart" src="arbetsprov-frontend/Material/shoppingcart.png"></a>
     </div>
 </nav>
 
