--- a/index.html
+++ b/index.html
@@ -54,9 +54,33 @@
             </label>
 
             <button class="addToCart">LÄGG I VARUKORG</button>
+            <p class="artNumber"><span class="grayText">ARTIKELNUMMER:</span> HM3049975AL</p>
         </div>    
+        <div class="collapsibleDiv">
+            <button type="button" class="collapsible">PRODUKTBESKRIVNING</button>
+                <div class="content">
+                <p>Lorem ipsum...</p>
+                </div>
+            <button type="button" class="collapsible">STORLEK & PASSFORM</button>
+                <div class="content">
+                <p>Lorem ipsum...</p>
+                </div>
+            <button type="button" class="collapsible">TVÄTT & SKÖTSELRÅD</button>
+                <div class="content">
+                <p>Lorem ipsum...</p>
+                </div>
+            <button type="button" class="collapsible">LEVERANS & RETUR</button>
+                <div class="content">
+                <p>Lorem ipsum...</p>
+                </div>
+        </div>
+        <div class="moreFromBrand">
+            
+        </div>
     </div>
 </div>
 
 </body>
+<script type="text/javascript" src="./js/accordion.js"></script>
+
 </html>
