--- a/index.html
+++ b/index.html
@@ -74,9 +74,41 @@
                 <p>Lorem ipsum...</p>
                 </div>
         </div>
-        <div class="moreFromBrand">
-            
+    </div>
+</div>
+
+<div class="otherProductsDiv">
+    <p class="leftTopCorner">MER FRÅN HACKETT LONDON</p>
+    <a href="#" class="rightTopCorner">SE ALLA HACKETT PRODUKTER ></a>
+
+    <div class="otherProductsContainer">
+        <div class="otherProduct">
+            <p class="imgLable">NYHET</p>
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401415_951_01_thumb.png">
+            <p class="otherProductBrand">HACKETT LONDON</p>
+            <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
+            <p class="otherProductPrice">999 kr</p>
         </div>
+        <div class="otherProduct">
+            <p class="imgLable">KAMPANJ</p>
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM441696_869_01_thumb.png">
+            <p class="otherProductBrand">HACKETT LONDON</p>
+            <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
+            <p class="otherProductPrice"></p><span class="strikethrough">999 kr </span><span class="redText"> 799 kr</span></p>
+
+        </div>    
+        <div class="otherProduct">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401400_561_01_thumb.png">
+            <p class="otherProductBrand">HACKETT LONDON</p>
+            <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
+            <p class="otherProductPrice">999 kr</p>
+        </div>    
+        <div class="otherProduct">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM550478_595_01_thumb.png">
+            <p class="otherProductBrand">HACKETT LONDON</p>
+            <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
+            <p class="otherProductPrice">999 kr</p>
+        </div>    
     </div>
 </div>
 
