--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#">REA</a>
     </div>
     <div class="logo">LOGO</div>
-    <div class="right">
+    <div class="rightNav">
     <a href="#">SÖK</a>
     <a href="#">LISTA (2)</a>
     <a href="#">KUNDKORG (2) <img class="shoppingcart" src="arbetsprov-frontend/Material/shoppingcart.png"></a>
@@ -59,29 +59,31 @@
         <div class="collapsibleDiv">
             <button type="button" class="collapsible">PRODUKTBESKRIVNING</button>
                 <div class="content">
-                <p>Lorem ipsum...</p>
+                <p>Detta är lite text (s)om berättar om produkten</p>
                 </div>
             <button type="button" class="collapsible">STORLEK & PASSFORM</button>
                 <div class="content">
-                <p>Lorem ipsum...</p>
+                <p>Här ser ni information om storlek och passform</p>
                 </div>
             <button type="button" class="collapsible">TVÄTT & SKÖTSELRÅD</button>
                 <div class="content">
-                <p>Lorem ipsum...</p>
+                <p>Information om tvätt och skötselråd</p>
                 </div>
             <button type="button" class="collapsible">LEVERANS & RETUR</button>
                 <div class="content">
-                <p>Lorem ipsum...</p>
+                <p>Information om leverans och returer</p>
                 </div>
         </div>
     </div>
 </div>
 
-<div class="otherProductsDiv">
-    <p class="leftTopCorner">MER FRÅN HACKETT LONDON</p>
-    <a href="#" class="rightTopCorner">SE ALLA HACKETT PRODUKTER ></a>
 
-    <div class="otherProductsContainer">
+<div class="otherProductsContainer">
+    <div class="otherTopbar">
+        <p class="leftTopCorner">MER FRÅN HACKETT LONDON</p>
+        <a href="#" class="rightTopCorner">SE ALLA HACKETT PRODUKTER ></a>
+    </div>
+    <a href="#">
         <div class="otherProduct">
             <p class="imgLable">NYHET</p>
             <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401415_951_01_thumb.png">
@@ -89,28 +91,89 @@
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
         </div>
+    </a>
+    <a href="#">
         <div class="otherProduct">
             <p class="imgLable">KAMPANJ</p>
             <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM441696_869_01_thumb.png">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice"></p><span class="strikethrough">999 kr </span><span class="redText"> 799 kr</span></p>
-
-        </div>    
+        </div> 
+    </a>
+    <a href="#">   
         <div class="otherProduct">
             <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401400_561_01_thumb.png">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
-        </div>    
+        </div>  
+    </a>
+    <a href="#">  
         <div class="otherProduct">
             <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM550478_595_01_thumb.png">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
+        </div> 
+    </a>   
+    </div>
+<div class="newsletter"> 
+    <img src="arbetsprov-frontend/Material/newsletter_bg.png">
+    <div class="newsletterTextDiv">
+        <p class="newsletterHeader">FÅ DET SENASTE</p>
+        <p class="newsletterText">Join our mailinglist to stay up to date on new arrivals, promotions and all things</p>
+    </div>
+    <div class="emailDiv">
+        <input class="email" type="email" id="email" name="email" placeholder="E-POSTADRESS">
+        <button class="emailButton">SKICKA</button>
+    </div>    
+</div>
+<div class="socialMedia">
+    <div class="socialMediaContainer">
+        <a href="#" class="left">FACEBOOK</a>
+        <a href="#" class="center">INSTAGRAM</a>
+        <a href="#" class="right">NYHETSBREV</a>
+    </div>
+</div>
+<div class="footerBackground">
+    <div class="footerContainer">
+        <div class="footerBox">
+            <p class="footerHeader">SHOP</p>
+            <a href="#">Herr</a>
+            <a href="#">Dam</a>
+            <a href="#">Märken</a>
+            <a href="#">Rea</a>
+        </div>
+        <div class="footerBox">
+            <p class="footerHeader">KUNDSERVICE</p>
+            <a href="#">Order</a>
+            <a href="#">Betalning</a>
+            <a href="#">Frakt & Leverans</a>
+            <a href="#">Returer</a>
+        </div>
+        <div class="footerBox">
+            <p class="footerHeader">KONTAKT</p>
+            <p class="bold">KONTAKTUPPGIFTER</p>
+            <p>TEL: 0700 00 00 00</p>
+            <p>E-POST: info@foretaget.se</p>
+        </div>
+        <div class="footerBox">
+            <p class="bold">VISTRÖM WEBB AB</p>
+            <p>KUNGSGATAN 9</p>
+            <p>531 3 SKÖVDE</p>
+        </div>
+        <div class="seo">
+            <p><span class="bold">Detta är lite text som beskriver företaget för sökmotorer vilket resulterar i att vi rankar högre.</span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In laoreet nunc at mauris luctus, id gravida magna vulputate. Sed interdum viverra sem vel tristique. Cras eleifend vel quam dignissim hendrerit. Fusce consequat metus in luctus tincidunt. Morbi cursus consectetur nisi at auctor. Cras lacinia sem tellus, vitae convallis erat faucibus ac. Integer euismod justo in sapien commodo, eu efficitur nisi scelerisque. Fusce maximus bibendum quam. Donec ac malesuada sapien. In a placerat odio. Vivamus semper odio at lacus aliquet efficitur. 
+            </p>
+        </div>
+        <div class="vistromContainer">
+            <p class="vistrom">VISTRÖM WEBB AB © 2017. ALLA RÄTTIGHETER RESERVERADE </p>
         </div>    
     </div>
 </div>
+
 
 </body>
 <script type="text/javascript" src="./js/accordion.js"></script>
