--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Vistrom Arbetsprov</title>
-<link rel="stylesheet" href="styles/styles.css">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true"><link rel="stylesheet" href="styles/styles.css">
 <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 </head>
 <body>
@@ -132,7 +134,7 @@
 <div class="socialMedia">
     <div class="socialMediaContainer">
         <a href="#" class="left">FACEBOOK</a>
-        <a href="#" class="center">INSTAGRAM</a>
+        <a href="#" class="middle">INSTAGRAM</a>
         <a href="#" class="right">NYHETSBREV</a>
     </div>
 </div>
