--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
                     <span class="selected">L</span>
                     </label>
             </div>
-
                 <button class="addToCart">LÄGG I VARUKORG</button>
+                <p class="artNumber"><span class="grayText">ARTIKELNUMMER:</span> HM3049975AL</p>
+            </div>
 
-            </div>
-            <p class="artNumber"><span class="grayText">ARTIKELNUMMER:</span> HM3049975AL</p>
-            </div>
-        </div>    
+
         <div class="collapsibleDiv">
             <button type="button" class="collapsible">PRODUKTBESKRIVNING</button>
                 <div class="content">
@@ -83,6 +81,7 @@
                 <div class="content">
                 <p>Information om leverans och returer</p>
                 </div>
+            </div>
         </div>
     </div>
 </div>
@@ -107,7 +106,7 @@
             <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM441696_869_01_thumb.png">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
-            <p class="otherProductPrice"></p><span class="strikethrough">999 kr </span><span class="redText"> 799 kr</span></p>
+            <p class="otherProductPrice"><span class="strikethrough">999 kr </span><span class="redText"> 799 kr</span></p>
         </div> 
     </a>
     <a href="#">   
