--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 </head>
 <body>
-
 <div class="topBar">
     <p class="topBarFreight">FRI FRAKT & FRIA RETURER   LEVERANS INOM 1-3 DAGAR</p>
     <a href="#">BLOGG</a>
@@ -30,7 +29,7 @@
     </div>
 </nav>
 <div class="mainProduct">
-    <img class="mainImg" src="arbetsprov-frontend/Material/main.png">
+    <img class="mainImg" src="arbetsprov-frontend/Material/jpg/main.jpg">
     <div class="mainInfo">
         <p class="newProduct">NYHET</p>
         <p class="inStock"> √ FINNS I LAGER</p>
@@ -93,7 +92,7 @@
     <a href="#">
         <div class="otherProduct">
             <p class="imgLable">NYHET</p>
-            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401415_951_01_thumb.png">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/jpg/SS16_HM401415_951_01_thumb.jpg">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
@@ -102,7 +101,7 @@
     <a href="#">
         <div class="otherProduct">
             <p class="imgLable">KAMPANJ</p>
-            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM441696_869_01_thumb.png">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/jpg/SS16_HM441696_869_01_thumb.jpg">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice"><span class="strikethrough">999 kr </span><span class="redText"> 799 kr</span></p>
@@ -110,7 +109,7 @@
     </a>
     <a href="#">   
         <div class="otherProduct">
-            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM401400_561_01_thumb.png">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/jpg/SS16_HM401400_561_01_thumb.jpg">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
@@ -118,7 +117,7 @@
     </a>
     <a href="#">  
         <div class="otherProduct">
-            <img class="otherProductImg" src="arbetsprov-frontend/Material/SS16_HM550478_595_01_thumb.png">
+            <img class="otherProductImg" src="arbetsprov-frontend/Material/jpg/SS16_HM550478_595_01_thumb.jpg">
             <p class="otherProductBrand">HACKETT LONDON</p>
             <p class="otherProductName">Hackett Garment Dyed Oxford Slim Fit Shirt White</p>
             <p class="otherProductPrice">999 kr</p>
@@ -126,7 +125,7 @@
     </a>   
     </div>
 <div class="newsletter"> 
-    <img src="arbetsprov-frontend/Material/newsletter_bg.png">
+    <img src="arbetsprov-frontend/Material/jpg/newsletter_bg.jpg">
     <div class="newsletterTextDiv">
         <p class="newsletterHeader">FÅ DET SENASTE</p>
         <p class="newsletterText">Join our mailinglist to stay up to date on new arrivals, promotions and all things</p>
@@ -180,9 +179,6 @@
         </div>    
     </div>
 </div>
-
-
-</body>
 <script type="text/javascript" src="./js/accordion.js"></script>
-
+</body>
 </html>
